assets/custom/css/custom.css
/* Add here all your css styles (customizations) */

/* Acsent bar custom*/

.bar-up {
  margin-top: 15px;
}

body {
  -webkit-font-smoothing: antialiased;
}

/*benefits fa position*/

#benefits-fas {
  font-size: 47px;
  margin-top: -12px;
  margin-right: 38px;
}

.center-font {
  font-size: 30px;
}

.red-icon {
  color: Red;
  font-size: 18px;
}

/*Awards img*/

.rounded img {
  height: inherit;
  width: inherit;
  border-radius: 500px;
  max-width: 100%;
}

.award-container {
  position: relative;
  max-width: 100%
}

.award-overlapped {
  position: absolute;
  left: 175px;
}

/*master background color*/

.g-theme-bg-color-1 {
  background: linear-gradient(rgba(32, 40, 43, .75), rgba(136, 140, 141, 1));
}

/*changes arrow color on about section*/

.arrow-section-block {
  position: relative;
  padding: 95px 50px 65px;
  overflow: visible;
}

.arrow-section-block:after {
  content: " ";
  display: block;
  position: absolute;
  left: 50%;
  margin-left: -17px;
  border-width: 17px;
  border-style: solid;
  border-right-color: transparent !important;
  border-left-color: transparent !important;
  z-index: 2;
  border-color: #656B6B;
}

.g-theme-bg-color-1 .arrow-section-block:after {
  border-color: #656B6B;
}

.arrow-section-block.arrow-top:after {
  bottom: 100%;
  border-top-color: transparent;
}

.arrow-section-block.arrow-bottom:after {
  top: 100%;
  border-bottom-color: transparent;
}

.arrow-section-block p {
  font-size: 16px;
  line-height: 26px;
}

#accordian.panel-group {
  background-color: transparent;
  color: #eee;
}

#benefits-description {
  margin-bottom: 15px;
}

.panel.panel-default {
  background-color: transparent;
  border-color: transparent;
}

.panel-default>.panel-heading {
  background-color: transparent;
}

.panel-default>.panel-heading {
  background-color: transparent;
}

.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading {
  display: inline-block;
  position: relative;
  padding-bottom: 5px;
}

.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body {
  border: none;
  height: 25em;
  overflow-y: scroll;
}

.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading:after {
  content: '';
  display: block;
  margin: auto;
  height: 3px;
  width: 0px;
  background: transparent;
  transition: width .3s ease, background-color .3s ease;
}

.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading:hover:after {
  width: 100%;
  background: #e74c3c;
}

.benefits-bullets {
  margin-bottom: 15px;
}

.benefits-container {
  vertical-align: top;
}

a, a:focus {
  color: purple;
  text-decoration: none;
}

a, a:hover {
  color: blue;
  text-decoration: none;
}

a, a:active {
  color: red;
  text-decoration: none;
}

/*changes header color - master*/

.lawyer-style h1, .lawyer-style h2, .lawyer-style h3, .lawyer-style h4, .lawyer-style h5, .lawyer-style h6 {
  color: #656B6B;
}

.g-theme-bg-color-transparent-1 {
  background: linear-gradient(rgba(32, 40, 43, .75), rgba(136, 140, 141, 1));
}

/*About section*/

#work-that-matters {
  background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)), url("../img/6.png");
  color: white;
}

#work-that-matters>h3 {
  color: white;
}

#leaders-that-captivate {
  background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)), url("../img/seigaiha.png");
  color: white;
}

#leaders-that-captivate>h3 {
  color: white;
}

/*charts*/

.pie-container {
  width: 60%;
  margin: 15px auto;
  color: black;
}

.bar-container {
  width: 90%;
  margin: 15px auto;
  color: black;
}

#chart {
  color: black;
}

/*events gallery*/

#events {
  padding-bottom: 100px;
}

.card-title {
  text-decoration: underline;
}

#events .card-deck .card-offset {
  padding-top: 0px;
  padding-bottom: 0px;
  margin-top: 0px;
  margin-bottom: 0px;
  border: none;
}

/*Career nav-tabs*/

.nav-tabs>li {
  float: none;
  display: inline-block;
  zoom: 1;
}

.nav-tabs {
  text-align: center;
}

.tab-pane h3 {
  margin-bottom: 25px;
  margin-top: 25px;
}

.nav-tabs>li.active>a {
  color: #555;
  cursor: default;
  background-color: #fff;
  border: 1px solid #ddd;
  border-bottom-color: transparent;
}

.nav-tabs>li.active>a:hover {
  color: #e74c3c;
  cursor: default;
  background-color: #fff;
  border: 1px solid #ddd;
  border-bottom-color: transparent;
}

.nav-tabs>li>a {
  color: #ddd;
}

.nav-tabs>li>a:hover {
  color: #e74c3c;
  background-color: #fff;
  border-bottom-color: transparent;
}

/*Event styles*/

h5 strong a {
  color: white;
}

h5 strong a:hover {
  color: #e74c3c;
}

.valign__middle {
  padding-top: 0;
}

.text-area-background {
  background: linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, .5));
}

.p-scroll {
  overflow: scroll;
}

.button-newPage {
  background-color: red;
  height: 50px;
  width: 130px;
  font-size: 20px;
  margin-left: 10px;
  margin-right: 10px;
  border-radius: 65px;
  outline: none;
}

[aria-expanded="false"]>.expanded, [aria-expanded="true"]>.collapsed {
  display: none;
}

.collapsed {
  color: red;
}

.expanded {
  color: red;
}

.collapseButton {
  background-color: transparent;
  user-select: none;
  box-shadow: 0 0 0 0px rgba(0, 0, 0, 0);
  border-color: transparent;
}

.collapseButton:focus {
  background-color: transparent;
  user-select: none;
  box-shadow: 0 0 0 0px rgba(0, 0, 0, 0);
}

.collapseButton:hover {
  background-color: transparent;
  user-select: none;
  box-shadow: 0 0 0 0px rgba(0, 0, 0, 0);
}

/*List Styling*/

.list_elem {
  margin-left: 1rem;
}

.bullet_top {
  position: absolute !important;
  top: 13px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-backface-visibility: hidden;
}

.nav-pad {
  padding-left: 30px;
  height: 60px;
}

#map {
  width: 100%;
  min-height: 650px;
  height: 100%;
}

.award {
  max-width: 500px;
}

.bptw {
  right: 20px;
  position: relative;
}

.testimonial {
  background: #0f0c29;
  /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

